; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cmd_search_rop.c_esil_split_flg.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cmd_search_rop.c_esil_split_flg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"f,=\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8**, i8**)* @esil_split_flg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @esil_split_flg(i8* %0, i8** %1, i8** %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8** %1, i8*** %5, align 8
  store i8** %2, i8*** %6, align 8
  %10 = load i8*, i8** %4, align 8
  %11 = call i8* @strstr(i8* %10, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  store i8* %11, i8** %7, align 8
  store i32 2, i32* %8, align 4
  store i32 0, i32* %9, align 4
  %12 = load i8*, i8** %7, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %44

14:                                               ; preds = %3
  br label %15

15:                                               ; preds = %28, %14
  %16 = load i32, i32* %9, align 4
  %17 = icmp ne i32 %16, 2
  br i1 %17, label %18, label %29

18:                                               ; preds = %15
  %19 = load i8*, i8** %7, align 8
  %20 = getelementptr inbounds i8, i8* %19, i32 -1
  store i8* %20, i8** %7, align 8
  %21 = load i8*, i8** %7, align 8
  %22 = load i8, i8* %21, align 1
  %23 = sext i8 %22 to i32
  %24 = icmp eq i32 %23, 44
  br i1 %24, label %25, label %28

25:                                               ; preds = %18
  %26 = load i32, i32* %9, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %9, align 4
  br label %28

28:                                               ; preds = %25, %18
  br label %15

29:                                               ; preds = %15
  %30 = load i8*, i8** %7, align 8
  %31 = getelementptr inbounds i8, i8* %30, i32 1
  store i8* %31, i8** %7, align 8
  %32 = call i8* @strdup(i8* %31)
  %33 = load i8**, i8*** %6, align 8
  store i8* %32, i8** %33, align 8
  %34 = load i8*, i8** %4, align 8
  %35 = load i8*, i8** %4, align 8
  %36 = call i64 @strlen(i8* %35)
  %37 = load i8**, i8*** %6, align 8
  %38 = load i8*, i8** %37, align 8
  %39 = call i64 @strlen(i8* %38)
  %40 = sub nsw i64 %36, %39
  %41 = sub nsw i64 %40, 1
  %42 = call i8* @r_str_ndup(i8* %34, i64 %41)
  %43 = load i8**, i8*** %5, align 8
  store i8* %42, i8** %43, align 8
  br label %44

44:                                               ; preds = %29, %3
  ret void
}

declare dso_local i8* @strstr(i8*, i8*) #1

declare dso_local i8* @strdup(i8*) #1

declare dso_local i8* @r_str_ndup(i8*, i64) #1

declare dso_local i64 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
